rubocop/examples/good/Style_SelfAssignment.rb
# Use shorthand self assignment operators whenever applicable.

# good
x += y
x *= y
x **= y
x /= y
x ||= y
x &&= y
