rubocop/examples/bad/Style_SelfAssignment.rb
# Use shorthand self assignment operators whenever applicable.

# bad
x = x + y
x = x * y
x = x**y
x = x / y
x = x || y
x = x && y
